--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,10 +1,6 @@
-app:
-    resource: '@AppBundle/Controller/'
-    type: annotation
-
-user:
-    resource: "@UserBundle/Resources/config/routing.yml"
-    prefix:   /user
+github:
+    resource: "@GithubBundle/Resources/config/routing.yml"
+    prefix:   /
 
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
@@ -24,3 +20,7 @@ fos_user_resetting:
 fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
     prefix: /profile
+
+user:
+    resource: "@UserBundle/Resources/config/routing.yml"
+    prefix:   /
