--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,14 @@
     },
     "require": {
         "php": ">=5.3.9",
+        "curl/curl": "^1.8",
         "doctrine/doctrine-bundle": "~1.4",
         "doctrine/orm": "^2.4.8",
         "friendsofsymfony/user-bundle": "~1.3",
         "incenteev/composer-parameter-handler": "~2.0",
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
+        "symfony/http-foundation": "^3.4",
         "symfony/monolog-bundle": "^3.0.2",
         "symfony/swiftmailer-bundle": "~2.3,>=2.3.10",
         "symfony/symfony": "2.8.*",
